--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Generate Custom RSS and JSON feeds for a Gatsby website at custom location, extring this plugin from @u-blox/custom-feed-builder-gatsby which does not support non standard values in feed",
   "scripts": {
     "build": "babel src --out-dir . ",
-    "watch": "babel -w src --out-dir . "
+    "watch": "babel -w src --out-dir . ",
+    "test": "jest --silent",
+    "test-travis": "jest --coverage"
   },
   "author": "Ahmad Faryab Kokab <ahmad.faryab@u-blox.com>",
   "license": "MIT",
@@ -18,8 +20,9 @@
     "feed"
   ],
   "dependencies": {
-    "@u-blox/custom-feed": "1.0.5",
+    "@u-blox/custom-feed": "1.0.7",
     "pify": "^3.0.0",
+    "jest": "^28.1.0",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
